testing converter. Modifying test from Challenge test, once language attribute changed